--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "crypto-js": "^4.1.1",
+    "echarts": "^5.4.2",
+    "element-plus": "^2.3.3",
+    "js-cookie": "^3.0.4",
+    "js-md5": "^0.7.3",
+    "moment": "^2.29.4",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
